# ormar-pyright-demo

./: Makefile  README.md  demo.py  pyproject.toml
