[tool.poetry]
name = "ormar-pyright-demo"
version = "0.1.0"
description = ""
authors = ["Ewgenij Starostin <Ewgenij.Starostin@foo.ag>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ormar = "^0.20.0"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.358"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
